apps/syncthing/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-lb
  namespace: syncthing
  annotations:
    metallb.io/loadBalancerIPs: 192.168.18.247
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  ports:
    - name: tcp
      port: 22000
      targetPort: tcp
    - name: quic
      port: 22000
      protocol: UDP
      targetPort: quic
    - name: discovery
      port: 21027
      protocol: UDP
      targetPort: discovery
