apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - name: http
      port: 8384
      targetPort: http
